classDiagram
    class InjectionToken {
        +resolve(IContainer, ResolveOneOptions?) T
        +args(...deps) InjectionToken~T~
        +argsFn(getArgsFn) InjectionToken~T~
        +lazy() InjectionToken~T~
    }

    class SingleToken {
        +token: string | symbol
        +resolve(IContainer) T
        +bindTo(IRegistration) void
        +args(...args) SingleToken~T~
        +argsFn(getArgsFn) SingleToken~T~
        +lazy() SingleToken~T~
    }

    class GroupAliasToken {
        +token: string | symbol
        +resolve(IContainer) T[]
        +bindTo(IRegistration) void
        +args(...args) GroupAliasToken~T~
        +argsFn(getArgsFn) GroupAliasToken~T~
        +lazy() InjectionToken~T[]~
    }

    class SingleAliasToken {
        +token: string | symbol
        +resolve(IContainer) T
        +bindTo(IRegistration) void
        +args(...args) InjectionToken~T~
        +argsFn(getArgsFn) InjectionToken~T~
        +lazy() InjectionToken~T~
    }

    class ClassToken {
        +target: constructor~T~
        +resolve(IContainer) T
        +args(...args) ClassToken~T~
        +argsFn(getArgsFn) ClassToken~T~
        +lazy() ClassToken~T~
    }

    class FunctionToken {
        +fn: ResolveFn~T~
        +resolve(IContainer) T
    }

    class ConstantToken {
        +value: T
        +resolve(IContainer) T
    }

    class GroupInstanceToken {
        +predicate: InstancePredicate
        +resolve(IContainer) Instance[]
        +cascade(value) GroupInstanceToken
    }

    InjectionToken <|-- SingleToken
    InjectionToken <|-- GroupAliasToken
    InjectionToken <|-- SingleAliasToken
    InjectionToken <|-- ClassToken
    InjectionToken <|-- FunctionToken
    InjectionToken <|-- ConstantToken
    InjectionToken <|-- GroupInstanceToken

    note for GroupAliasToken "Resolves to array of T\nSupports alias grouping"
    note for SingleAliasToken "Resolves to single T\nSupports alias grouping"
    note for ClassToken "Wraps class constructor\nFully supports all methods"
    note for FunctionToken "Custom resolution function\nUsed by select.scope"
    note for ConstantToken "Returns constant value\nUsed internally"
    note for GroupInstanceToken "Filters instances by predicate\nUsed by select.instances()"

